# vr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
dependencies/: CMakeLists.txt
dependencies/glew/: CMakeLists.txt
examples/: CMakeLists.txt
examples/basic_glfw_window/: CMakeLists.txt  basic_glfw_window_app.cpp  basic_glfw_window_app.hpp  main_loop.cpp  main_loop.hpp
examples/basic_window/: CMakeLists.txt  basic_window_app.cpp  basic_window_app.hpp  main.cpp
examples/glfw_opengl_es_controls/: CMakeLists.txt  controls.hpp  glfw_opengl_es_controls_app.cpp  glfw_opengl_es_controls_app.hpp  main.cpp  main_loop.cpp  main_loop.hpp  user_controls.cpp  user_controls.hpp
examples/glfw_opengl_es_controls/data/shaders/: vertex_shader.vert
examples/glfw_opengl_es_controls/shaders/: fragment_shader.frag  vertex_shader.vert
examples/glfw_opengl_es_cube/: CMakeLists.txt  glfw_opengl_es_cube_app.cpp  main_loop.cpp  main_loop.hpp
examples/glfw_opengl_es_cube/shaders/: vertex_shader.vert
examples/glfw_opengl_es_mesh/: CMakeLists.txt  glfw_opengl_es_mesh_app.cpp  main.cpp  main_loop.cpp  main_loop.hpp  mesh.hpp  user_controls.cpp
examples/glfw_opengl_es_model/: CMakeLists.txt  main.cpp  main_loop.cpp  main_loop.hpp  model.hpp  model_data.hpp  shader_loader.cpp  shader_loader.hpp  user_controls.hpp
examples/glfw_opengl_es_renderer/: CMakeLists.txt  cube_data.hpp  fps_counter.cpp  fps_counter.hpp  geometry_data_base.hpp  glfw_opengl_es_renderer_app.cpp  glfw_opengl_es_renderer_app.hpp  gui.cpp  gui.hpp  input_listener.cpp  input_listener.hpp  keyboard_listener.cpp  keyboard_listener.hpp  main.cpp  main_loop.cpp  main_loop.hpp  parameters_persistency.cpp  parameters_persistency.hpp  preamble.cpp  preamble.hpp  shaders.hpp  user_controls.cpp  user_controls.hpp
examples/glfw_opengl_es_renderer/data/models/: 2.fbx  2.glb  suzanne.dae
examples/glfw_opengl_es_renderer/data/shaders/: cube.frag  suzanne.frag  suzanne.vert
examples/glfw_opengl_es_triangle/: CMakeLists.txt  glfw_opengl_es_triangle_app.cpp  main.cpp  main_loop.cpp  main_loop.hpp
examples/glfw_opengl_window/: CMakeLists.txt  main_loop.cpp  (+3 more)
examples/lib_renderer_app/: CMakeLists.txt
examples/lib_renderer_app/include/: main_loop.hpp  monkey.hpp  parameters.hpp
examples/lib_renderer_app/src/: android_logging.cpp  android_logging.hpp  main_loop.cpp  paramters.cpp  shader_loader.cpp  shader_loader.hpp
vr/: CMakeLists.txt  vr.cpp  vr.h
vr-gl/: CMakeLists.txt
vr-gl/include/: builtin_uniforms.hpp  camera.hpp  color_mateiral.hpp  cube_texture_material.hpp  opengl.h  opengl_shader.hpp  opengl_shader_material.hpp  perspective_camera.hpp  renderer.hpp  renderer_settings.hpp  shader.h  shader.hpp  shader_program.hpp  shader_source.hpp  uniform_loader.hpp  vr-gl.hpp  vr-opengl.h
vr-gl/src/: camera.cpp  color_material.cpp  cube_texture_material.cpp  gpu_objects.hpp  opengl_debug_callback.cpp  opengl_debug_callback.hpp  opengl_shader.cpp  opengl_shader_material.cpp  perspective_camera.cpp  renderer.cpp  renderer_cache.cpp  renderer_cache.hpp  shader.cpp  shader_program.cpp  shader_source.cpp  texture_loader.cpp  texture_loader.hpp  uniform_loader.cpp
vr-glfw/: CMakeLists.txt
vr-glfw/include/: glfw_initialization.hpp  glfw_keyboard.hpp  glfw_keyboard_data.hpp  glfw_keyboard_listener.hpp  glfw_mouse.hpp  glfw_mouse_data.hpp  glfw_mouse_listener.hpp  glfw_util.hpp  glfw_window.hpp  glfw_window_settings.hpp  i_window_loop.hpp  vr-glfw.hpp
vr-glfw/src/: glfw_initialization.cpp  glfw_keyboard.cpp  glfw_mouse.cpp  glfw_user_pointer.hpp  glfw_util.cpp  glfw_window.cpp  i_window_loop.cpp
vr-model/: CMakeLists.txt
vr-model/include/: model_loading.hpp  vr-model.hpp
vr-model/src/: model_loading.cpp  phong.fshader  phong.vshader  shader_repository.cpp  shader_repository.hpp
vr-ogl/: CMakeLists.txt
vr-ogl/include/: test.hpp
vr-ogl/src/: test.cpp
vr-platform/: CMakeLists.txt
vr-platform/include/: android_logging.hpp  asset.hpp  asset_manager.hpp  assimp_importer.hpp  ndk_interface.hpp  platform_manager.hpp  platform_manager_factory.hpp
vr-platform/src/: android_asset_manager.cpp  android_asset_manager.hpp  android_logging.cpp  android_platform_manager.cpp  android_platform_manager.hpp  asset.cpp  assimp_importer.cpp  ndk_interface.cpp  ndk_interface.hpp  pc_asset_manager.cpp  pc_asset_manager.hpp  pc_platform_manager.cpp  pc_platform_manager.hpp  platform_manager_factory.cpp
vr-vk/: CMakeLists.txt
vr/include/: ambient_light.hpp  camera.hpp  cube_texture.hpp  defs.hpp  directional_light.hpp  geometry.hpp  glfw_util.hpp  glfw_window.hpp  glfw_window_settings.hpp  light.hpp  light_attenuation.hpp  light_components.hpp  light_container.hpp  mesh.hpp  object3d.hpp  orthographic_camera.hpp  perspective_camera.hpp  point_light.hpp  renderer_base.hpp  renderer_object.hpp  scene.hpp  shader_material.hpp  skybox.hpp  spot_light.hpp  texture.hpp  transformable.hpp  uniform.hpp  uniform_loader_base.hpp  util.hpp  vertex.hpp  vk_debug_default_callback.hpp  vk_extensions.hpp  vk_instance.hpp  vk_instance_settings.hpp  vk_layers.hpp  vk_validation_layer.hpp  vr.hpp  window.hpp  window_settings.hpp
vr/include/detail/: has_intensity.hpp  has_light_attenuation.hpp  has_light_components.hpp
vr/src/: ambient_light.cpp  camera.cpp  cube_texture.cpp  directional_light.cpp  glfw_initialization.cpp  glfw_initialization.hpp  glfw_window.cpp  glfw_window_settings.cpp  has_intensity.cpp  has_light_attenuation.cpp  has_light_components.cpp  light.cpp  light_container.cpp  mesh.cpp  object3d.cpp  orthographic_camera.cpp  perspective_camera.cpp  point_light.cpp  scene.cpp  shader_material.cpp  skybox.cpp  spot_light.cpp  texture.cpp  transformable.cpp  uniform.cpp  util.cpp  vk_debug_default_callback.cpp  vk_extensions.cpp  vk_instance.cpp  vk_instance.hpp  vk_layers.cpp  vk_validation_layer.cpp  window.cpp  window_settings.cpp
vr/test/: CMakeLists.txt  example_test.cpp  gtest_smoke_test.cpp  validation_layer.cpp  vk_extensions.cpp  vk_instance.cpp  vk_layers.cpp  vk_validation_layer.cpp
(+55 files in other folders)
